# weather

./: pyproject.toml
weather/: cli.py
